# dk_projects

./: cam_lf.py  sens_lf.py  spr5.txt
3D_objects/czlapczlap_Leg/: Assembly1.iam  arm1.ipt  bolt.ipt  foot.ipt  statyw.ipt  trzymaczka.ipt
3D_objects/czlapczlap_test/: Assembly_oled_keyboard.iam  Assembly_oled_keyboard.stl  Part1.ipt  tact_keyboard_botpins.step
3D_objects/diy_glock/: Assembly1.iam  Assembly2.iam  barrel.ipt  barrel_interior.ipt  bench.ipt  bot_glock.ipt  case.ipt  case_main.ipt  gandle.ipt  glock.iam  latch.ipt  route_bottom.ipt  route_top.ipt  spinner.ipt  spinner_alien.ipt  trigger.ipt
LF/: .project
LineFollower/: .cproject  .mxproject  Line_follower Debug.launch  Line_follower.ioc
LineFollower/Debug/: Line_follower.elf  Line_follower.list  Line_follower.map  makefile  objects.list
LineFollower/LF_PCB/: LF_PCB.kicad_prl  LF_PCB.kicad_sch  fp-info-cache
Lustro/: DIY_Mirror.docx
Praca_dyplomowa/: README.md
Praca_dyplomowa/LCD_Image_Converter_templates/: font_short.txt  font_template2.txt
Praca_dyplomowa/OLED_DISPLAY/: .cproject  (+6 more)
Wykrywacz/: MyDetector.docx  Untitled.ipynb
ZZUM_laboratorium/: cam_lf.py  cam_pid.py  main.py  motor_test.py  nowy_PID_camer.py  nowy_PID_listwa.py  sens_lf.py  sens_test.py  sudo_shutdown_-h_now
cpp_basics/: CMakeLists.txt  main.cpp
cpp_basics/googletest-master/googletest/cmake/: internal_utils.cmake
cpp_basics/include/: course.hpp  rectangle.hpp
cpp_basics/src/: course.cpp  rectangle.cpp
cpp_basics/test/: test_course.cpp  test_rectangle.cpp
lf_del/: .cproject  LF_TB Debug.launch  LF_TB.ioc
(+276 files in other folders)
